# backend/app/Http/Controllers/PedidosController.php
@@ -32,6 +32,15 @@ class PedidosController extends Controller
             ]],
         ];
 
+        $this->reviews = [
+            ["id" => "RVW-0000001", "client_id" => "1", "product_id" => 1, "comment" => "Es una bonita pantalla, las peliculas y los videojuegos se ven de fabula", "rating" => 4.5],
+            ["id" => "RVW-0000002", "client_id" => "1", "product_id" => 4, "comment" => "Aunque se ve simple, cumple con su cometido, me hubiera gustado que los materiales fueran de mejor calidad", "rating" => 3.5],
+            ["id" => "RVW-0000003", "client_id" => "1", "product_id" => 5, "comment" => "Compre este respuesto para la tv de mi madre, es un producto excelente y ademas facil de configurar, mi madre quedo fascinada.", "rating" => 5],
+            ["id" => "RVW-0000004", "client_id" => "1", "product_id" => 11, "comment" => "Bonita antena", "rating" => 4.5],
+            ["id" => "RVW-0000005", "client_id" => "1", "product_id" => 12, "comment" => "Cable HDMI de buena calidad", "rating" => 5],
+            ["id" => "RVW-0000006", "client_id" => "1", "product_id" => 13, "comment" => "Fue una compra dificil pero gracias a que consulte a Elektrin me decidi por este Roku para ver las pelis en linea en la tv de mi abue.", "rating" => 5],
+        ];
+
     }
     /**
      * @OA\Get(
@@ -144,6 +153,51 @@ class PedidosController extends Controller
                 if($item['pedido_id'] == $pedido_id) {
                     // $a = $item;
                     array_push($a, $item);
+                }
+            }
+            return response()->json([
+                'status' => true,
+                'data' => $a
+            ]);
+        } catch (Exception $ex) {
+            return response()->json([
+                'status' => false,
+                'error' => 'error_interno'
+            ], 400);
+        }
+    }
+    /**
+     * @OA\Get(
+     *     path="/api/v1/pedidos/{pedidos_id}/items/{product_id}/review",
+     *     operationId="PedidoTracking",
+     *     tags={"Pedidos"},
+     *     summary="Detalle de envio del pedido",
+     *     description="Este endpoint retorna el estado de envio de un pedido",
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/Pedido")
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Invalid credentials",
+     *         @OA\JsonContent(ref="#/components/schemas/Error")
+     *     ),
+     *     @OA\Response(
+     *         response="500",
+     *         description="Couldn't Create Token",
+     *         @OA\JsonContent(ref="#/components/schemas/Error")
+     *     )
+     * )
+     */
+    public function getPedidoItemReview($product_id, $pedido_id) {
+        try {
+            $a = [];
+            foreach ($this->reviews as $item) {
+                // var_dump($item);
+                if($item["product_id"] == $product_id) {
+                    // $a = $item;
+                    $a = $item;
                 }
             }
             return response()->json([
